backedn goals y skills updated